update week5 readings

--- a/prepare/week05.html
+++ b/prepare/week05.html
@@ -44,6 +44,15 @@
               >Ch13: AJAX</a
             >.
           </li>
+          <li>
+            Read all of
+            <a
+              href="https://dev.to/ahferroin7/the-html5-template-element-26b6"
+              target="_blank"
+              rel="noreferrer"
+              >HTML5 Template element</a
+            >.
+          </li>
         </ol>
       </main>
       <!-- end #article -->
