move article from w5 to w4

--- a/prepare/week04.html
+++ b/prepare/week04.html
@@ -21,16 +21,10 @@
         <hr />
 
         <p>
-          This week most of the assigned readings will be from the
-          <a
-            href="https://www.sitepoint.com/premium/books/javascript-novice-to-ninja-2nd-edition/read"
-            target="_blank"
-            rel="noreferrer"
-            >Javascript: Novice to Ninja</a
-          >
-          (Sitepoint) book. Remember though that if you are having trouble
-          understanding a concept the way that this book presents it...go find
-          another source!
+          Don't let this longer list worry you too much. Most of the articles
+          are fairly quick to read! Remember though that if you are having
+          trouble understanding a concept the way that these resources present
+          it...go find another source!
         </p>
 
         <h2>Reading</h2>
@@ -60,6 +54,15 @@
               target="_blank"
               rel="noreferrer"
               >The problem with single page apps</a
+            >.
+          </li>
+          <li>
+            Read all of
+            <a
+              href="https://dev.to/ahferroin7/the-html5-template-element-26b6"
+              target="_blank"
+              rel="noreferrer"
+              >HTML5 Template element</a
             >.
           </li>
         </ol>
