add sprint 2 details

--- a/ponder/team03.html
+++ b/ponder/team03.html
@@ -22,7 +22,9 @@
         <h2>Overview</h2>
         <p>
           This activity will continue the process of making our site more
-          dynamic.
+          dynamic. We will do this by addressing the home page. Eventually we
+          will want to list out more products, so we need to make the product
+          listing build dynamically based on provided data.
         </p>
         <h2>Instructions</h2>
         <p>
@@ -134,12 +136,12 @@
               <p class="callout">
                 Make sure that you have read the
                 <a
-                  href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/template"
+                  href="https://dev.to/ahferroin7/the-html5-template-element-26b6"
                   target="_blank"
-                  rel="noopener"
-                  >MDN article on template</a
+                  rel="noreferrer"
+                  >HTML5 Template element</a
                 >
-                from the reading list this week.
+                article from the reading list this week.
               </p>
               <p>
                 HTML <code>template</code>s are perfect for what we need to do.
