--- a/prepare/week06.html
+++ b/prepare/week06.html
@@ -44,6 +44,15 @@
               >Ch8: Forms</a
             >.
           </li>
+          <li>
+            Read all of
+            <a
+              href="https://developer.mozilla.org/en-US/docs/Learn/Forms/Form_validation"
+              target="_blank"
+              rel="noreferrer"
+              >MDN: Client side form validation</a
+            >.
+          </li>
         </ol>
       </main>
       <!-- end #article -->
