--- a/resources/sprint2.html
+++ b/resources/sprint2.html
@@ -32,6 +32,8 @@
             <dd>Add a search box to the navbar that will allow to search for a product. Whent he form submits the search results should be retrieved from the API and displayed on a product list page.</dd>
             <dt>Product List sort</dt>
             <dd>On the product list page add the ability to sort by name or price.</dd>
+            <dt>Duplicate items in cart</dt>
+            <dd>Currently our addToCart method does not check to see if an item is already in the cart before adding it again. Make this check...if the item is in the cart do not add it again.</dd>
             <dt>Correct image size</dt>
             <dd>Right now our pages show the same sized product image for all browser window sizes. Change the image shown based on the screen width.</dd>
             <dt>Sale flag</dt>
