--- a/teacher/week04.html
+++ b/teacher/week04.html
@@ -45,7 +45,12 @@
             >SW Film information</a
           >
           app. It uses the HTML template element to model one way of providing
-          re-usable HTML to our code.
+          re-usable HTML to our code. I realize that this is not a common way.
+          The truth is most folks let their framework handle the templating, or
+          include something like mustache or handlebar as part of their
+          development workflow...But I feel that this is helpful in getting the
+          students to think through some of the issues that must be addressed
+          with templating, without introducing another tool.
         </p>
         <p>
           This is a more complex demo. Lots going on. Focus on try/catch to
@@ -89,7 +94,7 @@ when a film is clicked:
             You might turn the students loose on the first two steps as review
             of what we have learned in previous weeks. They can use
             <kbd>https://swapi.dev/api/films</kbd> to get the initial info they
-            need.
+            need. Stress reuseability.
           </li>
           <li>
             Once they are done have a conversation about the method they wrote
