--- a/ponder/team03.html
+++ b/ponder/team03.html
@@ -81,6 +81,11 @@
                 about what methods we will need to complete this task. Export
                 your class as default, and import it into <kbd>main.js</kbd>.
               </p>
+              <p class="callout">
+                Make sure that you add <kdb>main.js</kdb> into your index.html
+                file with a script tag. Otherwise you may end up wondering why
+                nothing you do has any effect!
+              </p>
               <p>
                 Begin creating your ProductListing module by writing the code
                 for the constructor.
