--- a/ponder/team04.html
+++ b/ponder/team04.html
@@ -185,16 +185,17 @@
               <!-- BEGIN STEP -->
               <h3>Restructure</h3>
               <p>
-                We need to first build make some changes in our project
-                structure. We need to create a directory for each "view", and
-                place an index.html file in each to have our clean URLs like the
-                article suggested. We already have a directory for
-                product_pages. We need a <kbd>cart</kbd>, and
-                <kbd>checkout</kbd> directory. Create those then move the
-                cooresponding files into the directories and rename them to
-                <kbd>index.html</kbd>. You will also need to edit the cart and
-                checkout index files. Since we have moved them the paths to the
-                JS, CSS, and images will be different.
+                We need to first make some changes in our project structure. We
+                need to create a directory for each "view", and place an
+                index.html file in each to have our clean URLs like the article
+                suggested. We already have a directory for product_pages. We
+                need a <kbd>cart</kbd>, and <kbd>checkout</kbd> directory.
+                Create those then move the cart.html file into the
+                <kbd>cart</kbd> directory and rename it to
+                <kbd>index.html</kbd>. Do the same thing with checkout.html. You
+                will also need to edit the cart and checkout index files. Since
+                we have moved them the paths to the JS, CSS, and images will be
+                different.
               </p>
 
               <!-- END STEP -->
