--- a/prepare/week08.html
+++ b/prepare/week08.html
@@ -28,13 +28,7 @@
             rel="noreferrer"
             >Javascript: Novice to Ninja</a
           >
-          and
-          <a
-            href="https://www.sitepoint.com/premium/books/html5-css3-for-the-real-world-2nd-edition"
-            target="_blank"
-            rel="noreferrer"
-            >HTML5 and CSS3 for the Real world</a
-          >
+
           (Sitepoint) books. Remember though that if you are having trouble
           understanding a concept the way that this book presents it...go find
           another source!
@@ -45,20 +39,21 @@
           <li>
             Read all of
             <a
-              href="https://www.sitepoint.com/premium/books/javascript-novice-to-ninja-2nd-edition/read/11"
+              href="https://auth0.com/learn/json-web-tokens/?_ga=2.184084847.834837117.1611866055-1405126930.1611866055"
               target="_blank"
               rel="noreferrer"
-              >Ch11: Further Functions</a
+              >Getting Started with Json Web Tokens (JWT)</a
             >.
           </li>
           <li>
-            Read all of
+            Watch
             <a
-              href="https://www.sitepoint.com/premium/books/html5-css3-for-the-real-world-2nd-edition/read/8"
+              href="https://www.sitepoint.com/premium/tech-talks/dotjs-2019/develop-debug-learn"
               target="_blank"
               rel="noreferrer"
-              >Ch8: Transforms and Transitions</a
+              >Develop, Debug, Learn?</a
             >
+            (Sitepoint 19min)
           </li>
         </ol>
       </main>
