--- a/teacher/week04.html
+++ b/teacher/week04.html
@@ -36,6 +36,11 @@
           Encourage the students also to record their questions while reading
           and give them to you to be addressed.
         </p>
+        <p>
+          Also this week you should coordinate with the CSE 341 instructor if
+          you are doing hte cross course team project. The teams should be
+          formed this week so the students can meet next week
+        </p>
         <h2>Meeting Time</h2>
 
         <p>
