--- a/teacher/week05.html
+++ b/teacher/week05.html
@@ -21,42 +21,42 @@
         <hr />
         <h2>Overview</h2>
         <p>
-          The team activity for this week is build design and build a simple
-          organized application using ESModules and classes. The students will
-          take the code from the Hikes demo if you shared it as a starting
-          point. The discussion they have at the beginning is probably as
-          important as the actual implementation. You may need to say a few
-          words organizing code to help get them started on their discussions.
+          The team activity for this week is to apply more templating to our
+          site. This week we will pull the header and footer into files and loaf
+          them in with javascript
         </p>
         <p>
-          The reading assignment for this week is smaller to allow time to start
-          on the first challenge. This one will be given them. It is to build a
-          simple <a href="../resources/todo.html" target="_blank">Todo App</a>.
-          Be prepared to answer questions about this.
+          the teams for the final project should be organized by this week as
+          well. the students from both classes should meet this week and
+          brainstorm a list of project ideas.
         </p>
-        <p>
-          Encourage the students also to record their questions while reading
-          and give them to you to be addressed.
-        </p>
+
         <h2>Meeting Time</h2>
 
         <p>
-          Keep your comments short this week in your meeting to allow for
-          students to ask questions about their projects. It would probably be
-          helpful to give more examples of using the browser to
-          debug...breakpoints, stepping, etc. Here is a simple module that
-          builds a
-          <a href="../examples/datepicker.html" target="_blank">datepicker</a>
-          for browsers that don't support the new <kbd>date</kbd> type for
-          inputs (ie Safari). Points to bring up:
+          This week for the meeting I would recommend spending a lot of time on
+          debugging. You could use this project
+          <a href="../examples/hikes/" target="_blank">hikes</a>
+          as a starting point. It has a lot of errors in it. Students can
+          download it from here:
+          <a href="https://byui-cit.github.io/wdd330/examples/hikes.zip"
+            >https://byui-cit.github.io/wdd330/examples/hikes.zip</a
+          >
+        </p>
+        <p>
+          Have them download it then run it and start finding and eliminating
+          bugs. You could do the first few together then turn them loose on
+          some...or stay together...up to you. Emphasize a few things that
+          students seem to struggle with:
         </p>
         <ol>
           <li>
-            Show how the <code>debugger;</code> statement can be used to stop
-            the code execution, as well as how to set a breakpoint in the
-            developer tools of the browser.
+            Figuring out how to navigate through a project made up of multiple
+            files and modules. They get lost easily and have a hard time
+            following the flow. Open index.html and show the script src...this
+            is the entry point. Open that file and set a breakpoint.
           </li>
-          <li>Once the code is paused show how to step over, step in.</li>
+          <li>Once the code is paused remind how to step over, step in.</li>
           <li>
             Explain how we can follow the execution of an application with
             stepping. You might step into a few functions and then draw
@@ -67,25 +67,13 @@
             looking to see if the values match what we expect...if not how can
             we figure out why?
           </li>
+
           <li>
-            You might also point out lines 128-130 in <kbd>datepicker.js</kbd>.
-            It is testing to see if the browser supports the
-            <code>date</code> type and doing something if it doesn't.
-          </li>
-          <li>
-            If you have time show examples of other ways to avoid errors in our
-            code such as if statements checking for the existance of data before
-            we try to use it and using try/catch blocks to deal with errors more
-            gracefully.
+            Discuss examples of ways to avoid errors in our code such as if
+            statements checking for the existance of data before we try to use
+            it and using try/catch blocks to deal with errors more gracefully.
           </li>
         </ol>
-        <p>
-          A word about project planning would be good here as well. Encourage
-          the students to spend some time thinking through their project before
-          they jump into the code. Encourage them to build a wireframe or two to
-          help them remember and apply the design principles discussed in the
-          first week of class.
-        </p>
       </main>
       <!-- end #article -->
     </div>
